appId: com.blakemedlock.ComplianceApp
---
- runFlow:
    file: subflow_login.yaml
    env:
      USER_EMAIL: "manager@test.co.uk"
      USER_PASS: "password"

- assertVisible: "COMMAND DASHBOARD"
- tapOn: { id: "notifications-btn" }

- assertVisible: "A new hazard was logged at North Wing - Block C by John Staff"
